syntax ="proto3";
option go_package ="../cart";
package cart;
service Cart{
    rpc Create(CreateRequest) returns (CreateResponse);
}
message CreateRequest{
    string cart_uuid = 1;
    string customer_name = 2;
    int64 phone = 3;
    string address = 4;
}
message CreateResponse {
    repeated DetailResponse CartItem = 1;
  }
  message DetailResponse {
    string cart_uuid = 1;     
	string product_uuid = 2;  
	string uuid = 3;         
	string product_name = 4;  
	double product_price = 5; 
	int64 quantity = 6;      
	double product_total = 7;   
  }
